Short time HH:MM in text widget.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -4929,6 +4929,9 @@
         }
       }
     },
+    "{shortTime} - Show time as HH:MM" : {
+
+    },
     "{speed} - Show speed" : {
       "localizations" : {
         "de" : {
